# miniapm

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  communications.md  docker-compose.yml  rust-toolchain.toml
.github/workflows/: ci.yml
crates/miniapm/: Cargo.toml
crates/miniapm-admin/: Cargo.toml
crates/miniapm-admin/src/: auth.rs  lib.rs  main.rs
crates/miniapm-admin/src/web/: api_key.rs  auth.rs  auth_middleware.rs  dashboard.rs  deploys.rs  errors.rs  mod.rs  performance.rs  project_context.rs  projects.rs  traces.rs
crates/miniapm-admin/static/: style.css
crates/miniapm-admin/templates/: dashboard.html
crates/miniapm-admin/templates/auth/: change_password.html  invite.html
crates/miniapm-admin/templates/deploys/: index.html
crates/miniapm-admin/templates/errors/: index.html
crates/miniapm-admin/templates/performance/: index.html
crates/miniapm-admin/templates/projects/: index.html
crates/miniapm-admin/templates/traces/: index.html  show.html
crates/miniapm-cli/: Cargo.toml
crates/miniapm-cli/src/: main.rs
crates/miniapm/src/: db.rs  lib.rs  server.rs
crates/miniapm/src/api/: auth.rs  ingest.rs  mod.rs
crates/miniapm/src/web/: mod.rs  (+4 more)
crates/miniapm/templates/: layout.html
gem/: CHANGELOG.md  Gemfile  LICENSE  README.md  Rakefile  miniapm.gemspec
gem/lib/: miniapm.rb
gem/lib/miniapm/: configuration.rb  context.rb  error_event.rb  span.rb  testing.rb  trace.rb  version.rb
gem/spec/: examples.txt  spec_helper.rb
gem/spec/integration/: error_reporting_spec.rb  full_trace_spec.rb  otlp_export_spec.rb
gem/spec/unit/: configuration_spec.rb  context_spec.rb  error_event_spec.rb  span_spec.rb  testing_spec.rb  trace_spec.rb
landing/: index.html
src/: config.rs  db.rs  lib.rs  main.rs  server.rs
src/api/: auth.rs  health.rs  ingest.rs  mcp.rs  mod.rs
src/jobs/: mod.rs  retention.rs  rollup.rs
src/mcp/: server.rs
src/models/: api_key.rs  deploy.rs  error.rs  mod.rs  project.rs  request.rs  rollup.rs  span.rs  user.rs
src/simulator/: mod.rs  patterns.rs  routes.rs  runner.rs  traces.rs
src/web/: api_key.rs  auth.rs  auth_middleware.rs  dashboard.rs  deploys.rs  errors.rs  mod.rs  performance.rs  project_context.rs  projects.rs  slow_requests.rs  traces.rs
static/: style.css
templates/: dashboard.html  layout.html  slow_requests.html
templates/auth/: login.html  users.html
templates/deploys/: index.html
templates/errors/: index.html  show.html
templates/performance/: index.html
templates/projects/: index.html
(+55 files in other folders)
