[package]
name = "miniapm"
version = "0.1.0"
edition = "2021"
description = "Minimal APM for Rails"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Templates
askama = "0.12"
askama_axum = "0.4"

# CLI
clap = { version = "4", features = ["derive"] }

# HTTP client (for simulator) - using rustls to avoid OpenSSL dependency
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Utils
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
anyhow = "1"

# Authentication
argon2 = "0.5"
tower-cookies = "0.10"
axum-extra = { version = "0.9", features = ["cookie"] }
time = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
